# Platformer

./: .gitignore  CMakeLists.txt
Platformer/: CMakeLists.txt  Platformer.cpp  Platformer.h  animation.h  gameObject.h  timer.h
